Bug #26900 ndb_restore printout option does not give structured data
Submitted: 7 Mar 2007 7:17 Modified: 10 Apr 2007 8:01
Reporter: Tomas Ulin
Status: Closed
Category:Server: Cluster Severity:S3 (Non-critical)
Version:4.1,5.0,5.1 OS:Any
Assigned to: Tomas Ulin Target Version:

[7 Mar 2007 7:17] Tomas Ulin
Description:
ndb_restore printout option does not give structured data that can be readily parsed for
import

How to repeat:
.
[26 Mar 2007 9:44] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/22913

ChangeSet@1.2416, 2007-03-26 09:58:01+02:00, tomas@whalegate.ndb.mysql.com +1 -0
  Bug #26900 ndb_restore printout option does not give structured data
  - set sizes for data
[30 Mar 2007 10:54] Bugs System
Pushed into 5.0.40
[6 Apr 2007 14:54] Jon Stephens
Documented new options for 5.0 in 5.0.40 changelog and ndb_restore
description in Manual.

Returned to PatchPending while waiting for 5.1 push.
[7 Apr 2007 10:18] Tomas Ulin
5.1.18
[10 Apr 2007 8:01] Jon Stephens
Thank you for your bug report. This issue has been committed to our source repository of
that product and will be incorporated into the next release.

If necessary, you can access the source repository and build the latest available version,
including the bug fix. More information about accessing the source trees is available at

    http://dev.mysql.com/doc/en/installing-source.html

Documented new options for 5.1 in 5.1.18 changelog and ndb_restore
description in 5.1 Manual.