Bug #26900 ndb_restore printout option does not give structured data - set sizes for data